# GameDev

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
modules/: CMakeLists.txt  main.cpp
modules/CoreGL/: CMakeLists.txt  Program.cpp  Program.h  Shader.cpp  Shader.h  Uniform.cpp  Uniform.h  VertexModel.cpp  VertexModel.h
modules/FileHandler/: ShaderFile.cpp  ShaderFile.h
modules/Utility/: CMakeLists.txt  File.cpp  File.h
modules/main/: CMakeLists.txt  main.cpp
resources/shaders/: rotating-vert.glsl  simple-frag.glsl
